# CMPNet

./: .gitignore  README.md  baxter_util.py  cmpnet_compare_sample.py  cmpnet_pretrain.sh  cmpnet_test.py  cmpnet_test.sh  cmpnet_test_c2d.sh  cmpnet_test_home.py  cmpnet_test_r2d.sh  cmpnet_test_r2d_SGD.sh  cmpnet_test_r2d_SGD_0.001.sh  cmpnet_test_r2d_SGD_0.001_simple.sh  cmpnet_test_r2d_adagrad.sh  cmpnet_test_r2d_adagrad_0.001.sh  cmpnet_test_r2d_adagrad_0.001_simple.sh  cmpnet_test_r2d_simple.sh  cmpnet_test_r2d_simple_ASGD.sh  cmpnet_test_r2d_simple_ASGD_0.0005.sh  cmpnet_test_r2d_simple_ASGD_0.001.sh  cmpnet_test_r2d_simple_SGD.sh  cmpnet_test_r2d_simple_SGD_0.0005.sh  cmpnet_test_r2d_simple_SGD_0.001.sh  cmpnet_test_r2d_simple_adagrad.sh  cmpnet_test_r2d_simple_adagrad_0.0005.sh  cmpnet_test_r2d_simple_adagrad_0.001.sh  cmpnet_test_r2d_simple_adagrad_0.01.sh  cmpnet_test_r2d_simple_adam.sh  cmpnet_test_r3d.sh  cmpnet_test_s2d.sh  cmpnet_test_shallow.sh  cmpnet_test_voxel.sh  cmpnet_train.py  cmpnet_train.sh  cmpnet_train_c2d.sh  cmpnet_train_r2d.sh  cmpnet_train_r2d_SGD.sh  cmpnet_train_r2d_adagrad.sh  cmpnet_train_r2d_simple.sh  cmpnet_train_r2d_simple_ASGD.sh  (+51 more)
Model/: GEM_end2end_model.py  GEM_end2end_model_cover_prio.py  GEM_end2end_model_loss_prio.py  GEM_end2end_model_reward_prio.py  gem_utility.py  model.py  model_baxter.py  model_c2d.py  model_c2d_simple.py  model_home.py  model_shallow.py  new_shallow_model.py  shallow_GEM_end2end_model.py
Model/AE/: CAE.py  CAE_baxter.py  CAE_baxter_shallow.py  CAE_baxter_voxel.py  CAE_complex.py  CAE_deep_r3d.py  CAE_home.py  CAE_home_identity.py  CAE_home_voxel.py  CAE_home_voxel_2.py  CAE_home_voxel_3.py  CAE_simple.py  PointnetAE.py  data_loader.py  data_loader_baxter.py  pointnet.py  simplePointnetAE.py  simple_pointnet.py
c++/: CMakeLists.txt  compare_python_cpp.py  py_model_to_cpp.py  test_sample_gen.py
c++/include/: mpnet_home_model.hpp  mpnet_planner.hpp
c++/src/: home_ompl.cpp  mpnet_home_model.cpp  mpnet_planner.cpp
exp/: cmpnet_test_c2d.sh  cmpnet_test_home.sh  cmpnet_test_home_MLP2.sh  cmpnet_test_home_MLP2_lr001_SGD.sh  cmpnet_test_home_MLP2_lr01.sh  cmpnet_test_home_MLP2_lr01_SGD.sh  cmpnet_test_home_MLP2_lr025_SGD.sh  cmpnet_test_home_MLP2_lr025_SGD_challenge.sh  cmpnet_test_home_MLP2_lr025_SGD_local_reorder.sh  cmpnet_test_home_MLP2_lr025_SGD_local_reorder_challenge.sh  cmpnet_test_home_MLP2_lr1_SGD.sh  cmpnet_test_home_MLP3.sh  cmpnet_test_home_MLP4.sh  cmpnet_test_home_MLP5.sh  cmpnet_test_home_lr001_SGD.sh  cmpnet_test_home_lr01_SGD.sh  cmpnet_test_r2d.sh  cmpnet_test_r3d.sh  cmpnet_test_s2d.sh  cmpnet_train_c2d.sh  cmpnet_train_home.sh  cmpnet_train_home_MLP2.sh  cmpnet_train_home_MLP2_lr001_SGD.sh  cmpnet_train_home_MLP2_lr01.sh  cmpnet_train_home_MLP2_lr01_SGD.sh  cmpnet_train_home_MLP2_lr025_SGD.sh  cmpnet_train_home_MLP2_lr05.sh  cmpnet_train_home_MLP2_lr05_SGD.sh  cmpnet_train_home_MLP2_lr1.sh  cmpnet_train_home_MLP2_lr1_SGD.sh  cmpnet_train_home_MLP3.sh  cmpnet_train_home_MLP4.sh  cmpnet_train_home_MLP5.sh  cmpnet_train_home_lr001_SGD.sh  cmpnet_train_home_lr01_SGD.sh  cmpnet_train_r2d.sh  cmpnet_train_r3d.sh  cmpnet_train_s2d.sh  compare_sampling_method_cover.sh  compare_sampling_method_loss.sh  (+41 more)
exp/model_tuning/: cmpnet_test_home_MLP4.sh  cmpnet_test_home_MLP5.sh  cmpnet_train_home_MLP4.sh  mpnet_test_home_MLP3_lr01.sh  mpnet_test_home_MLP3_lr01_SGD.sh  mpnet_test_home_MLP4_lr01.sh  mpnet_test_home_MLP5_lr01.sh  mpnet_test_home_MLP5_lr01_SGD.sh  mpnet_train_home_MLP3.sh  mpnet_train_home_MLP3_lr01_SGD.sh  mpnet_train_home_MLP4_lr001_SGD.sh  mpnet_train_home_MLP4_lr01_SGD.sh  mpnet_train_home_MLP5_lr01.sh  mpnet_train_home_lr01.sh
mpnet_lib/: import_tool.py  train_tools.py
